--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ repository               : "LividWo/LividWo.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
-google_analytics_id      :  #  G-SWFCX99KQZ
+google_analytics_id      :  G-G9NL4X0WHL #  G-SWFCX99KQZ
 
 # SEO Related
 google_site_verification : # b_BbOIt7d513ZXYDw-YRMicO6O5tthYiouqWDdWjGTU
