--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Zhiyong Wu (吴志勇)"
+title                    : "Zhiyong Wu"
 description              : "Research scientist in Bytedance Seed"
 repository               : "LividWo/zywu.github.io"
 google_scholar_stats_use_cdn : true
@@ -21,9 +21,9 @@ baidu_site_verification  : # code-ZxFK3f4pfb
 
 # Site Author
 author:
-  name             : "Zhiyong Wu (吴志勇)"
+  name             : "Zhiyong Wu"
   avatar           : "images/profile.png"
-  bio              : "Bytedance Seed"
+  bio              : "吴志勇"
   location         : "Shenzhen/Beijing, China"
   employer         :
   pubmed           : 
